[gd_scene load_steps=14 format=3 uid="uid://dfh5r553kua0a"]

[ext_resource type="Script" uid="uid://de7p6bbrswxkf" path="res://scripts/components/hitbox_component.gd" id="1_h17bh"]
[ext_resource type="Script" uid="uid://co4qrgpv3tovi" path="res://scripts/test_enemy.gd" id="1_t46gg"]
[ext_resource type="Script" uid="uid://bqgxfle68x2yf" path="res://scripts/states/state_machine.gd" id="3_fpxyv"]
[ext_resource type="Script" uid="uid://hqnoqlqypuo4" path="res://scripts/states/enemy/e_idle.gd" id="4_lkcdx"]
[ext_resource type="Script" uid="uid://grb5ndohtlbi" path="res://scripts/states/enemy/e_state.gd" id="5_8c00y"]
[ext_resource type="Script" uid="uid://dklqxgkl6scss" path="res://scripts/states/enemy/e_pursuit.gd" id="5_t46gg"]
[ext_resource type="Script" uid="uid://cbytxgc3ophoe" path="res://scripts/components/health_component.gd" id="6_1y3pe"]
[ext_resource type="Script" uid="uid://bw57iumvcftvi" path="res://scripts/states/enemy/e_attack.gd" id="6_dddk1"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_h17bh"]
radius = 0.710148
height = 1.45704

[sub_resource type="PrismMesh" id="PrismMesh_7ibm0"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_mkyue"]
height = 1.05774
radius = 0.541016

[sub_resource type="SphereShape3D" id="SphereShape3D_1y3pe"]
radius = 10.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1y3pe"]
height = 0.98877
radius = 0.518066

[node name="TestEnemy" type="CharacterBody3D" node_paths=PackedStringArray("DEATH_STATE")]
collision_layer = 4
collision_priority = 2.0
script = ExtResource("1_t46gg")
DEATH_STATE = NodePath("StateMachine/Die")

[node name="CollisionSphere" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.16983, -0.132381)
shape = SubResource("CapsuleShape3D_h17bh")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PrismMesh_7ibm0")

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("HEALTH_COMPONENT", "PARENT")]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_h17bh")
HEALTH_COMPONENT = NodePath("../HealthComponent")
PARENT = NodePath("..")
metadata/_custom_type_script = "uid://de7p6bbrswxkf"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00567627, 0)
shape = SubResource("CylinderShape3D_mkyue")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("INITIAL_STATE")]
script = ExtResource("3_fpxyv")
INITIAL_STATE = NodePath("Idle")
metadata/_custom_type_script = "uid://bqgxfle68x2yf"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("PURSUE_STATE")]
script = ExtResource("4_lkcdx")
PURSUE_STATE = NodePath("../Pursuit")
metadata/_custom_type_script = "uid://grb5ndohtlbi"

[node name="Pursuit" type="Node" parent="StateMachine" node_paths=PackedStringArray("IDLE_STATE", "ATTACK_STATE")]
script = ExtResource("5_t46gg")
IDLE_STATE = NodePath("../Idle")
ATTACK_STATE = NodePath("../Attack")
MOVE_SPEED = 7.0
metadata/_custom_type_script = "uid://grb5ndohtlbi"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("PURSUIT_STATE")]
script = ExtResource("6_dddk1")
PURSUIT_STATE = NodePath("../Pursuit")
metadata/_custom_type_script = "uid://grb5ndohtlbi"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("5_8c00y")
metadata/_custom_type_script = "uid://grb5ndohtlbi"

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("PARENT")]
script = ExtResource("6_1y3pe")
PARENT = NodePath("..")
metadata/_custom_type_script = "uid://cbytxgc3ophoe"

[node name="ScanSphere" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="ScanSphere" type="CollisionShape3D" parent="ScanSphere"]
shape = SubResource("SphereShape3D_1y3pe")

[node name="AttackRange" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.00845)
collision_layer = 4
collision_mask = 2

[node name="AttackRange" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_1y3pe")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="SporeAttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="ScanSphere" to="StateMachine/Idle" method="_on_scan_sphere_area_entered"]
[connection signal="area_exited" from="ScanSphere" to="StateMachine/Pursuit" method="_on_scan_sphere_area_exited"]
[connection signal="area_entered" from="AttackRange" to="StateMachine/Pursuit" method="_on_attack_range_area_entered"]
